fix(1447): align notification to figma design

--- a/packages/components/src/components/notification/notification.scss
+++ b/packages/components/src/components/notification/notification.scss
@@ -41,6 +41,8 @@
   & .ifx-notification__icon {
     margin-right: tokens.$ifxSpace100;
     display: flex;
+    align-self: flex-start;
+    padding-top: 2px;
   }
 
   & .ifx-notification__body {
@@ -60,6 +62,10 @@
 
     & .ifx-notification__body {
       flex-direction: column;
+    }
+
+    & .ifx-notification__link {
+      margin-top: tokens.$ifxSpace100;
     }
   }
 }
